--- a/service/package.json
+++ b/service/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bookshelf": "^1.2.0",
     "chatgpt": "^5.1.2",
     "dotenv": "^16.0.3",
     "esno": "^0.16.3",
@@ -32,7 +33,9 @@
     "express-rate-limit": "^6.7.0",
     "https-proxy-agent": "^5.0.1",
     "isomorphic-fetch": "^3.0.0",
+    "knex": "^2.4.2",
     "node-fetch": "^3.3.0",
+    "pg": "^8.10.0",
     "socks-proxy-agent": "^7.0.0"
   },
   "devDependencies": {
